[project]
name = "llm-kimi"
version = "0.1.0"
description = "LLM plugin to access Moonshot's Kimi models"
authors = [{ name = "Ziqin Wang" }]
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "httpx>=0.28.1",
    "llm>=0.31",
    "rich>=15.0.0",
]

[project.entry-points.llm]
kimi = "llm_kimi"
